// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot basic: should reserve position 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 10,
                      "line": 5,
                      "offset": 36,
                    },
                    "start": Object {
                      "column": 7,
                      "line": 5,
                      "offset": 33,
                    },
                  },
                  "type": "text",
                  "value": "将进酒",
                },
              ],
              "depth": 3,
              "position": Object {
                "end": Object {
                  "column": 11,
                  "line": 5,
                  "offset": 37,
                },
                "start": Object {
                  "column": 3,
                  "line": 5,
                  "offset": 29,
                },
              },
              "type": "heading",
            },
            Object {
              "children": Array [
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 22,
                      "line": 7,
                      "offset": 60,
                    },
                    "start": Object {
                      "column": 3,
                      "line": 7,
                      "offset": 41,
                    },
                  },
                  "type": "text",
                  "value": "君不见黄河之水天上来，奔流到海不复回。",
                },
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 23,
                      "line": 7,
                      "offset": 61,
                    },
                    "start": Object {
                      "column": 22,
                      "line": 7,
                      "offset": 60,
                    },
                  },
                  "type": "break",
                },
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 22,
                      "line": 8,
                      "offset": 83,
                    },
                    "start": Object {
                      "column": 23,
                      "line": 7,
                      "offset": 61,
                    },
                  },
                  "type": "text",
                  "value": "
君不见高堂明镜悲白发，朝如青丝暮成雪。",
                },
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 23,
                      "line": 8,
                      "offset": 84,
                    },
                    "start": Object {
                      "column": 22,
                      "line": 8,
                      "offset": 83,
                    },
                  },
                  "type": "break",
                },
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 19,
                      "line": 9,
                      "offset": 103,
                    },
                    "start": Object {
                      "column": 23,
                      "line": 8,
                      "offset": 84,
                    },
                  },
                  "type": "text",
                  "value": "
人生得意须尽欢，莫使金樽空对月。",
                },
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 20,
                      "line": 9,
                      "offset": 104,
                    },
                    "start": Object {
                      "column": 19,
                      "line": 9,
                      "offset": 103,
                    },
                  },
                  "type": "break",
                },
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 19,
                      "line": 10,
                      "offset": 123,
                    },
                    "start": Object {
                      "column": 20,
                      "line": 9,
                      "offset": 104,
                    },
                  },
                  "type": "text",
                  "value": "
天生我材必有用，千金散尽还复来。",
                },
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 20,
                      "line": 10,
                      "offset": 124,
                    },
                    "start": Object {
                      "column": 19,
                      "line": 10,
                      "offset": 123,
                    },
                  },
                  "type": "break",
                },
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 19,
                      "line": 11,
                      "offset": 143,
                    },
                    "start": Object {
                      "column": 20,
                      "line": 10,
                      "offset": 124,
                    },
                  },
                  "type": "text",
                  "value": "
烹羊宰牛且为乐，会须一饮三百杯。",
                },
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 20,
                      "line": 11,
                      "offset": 144,
                    },
                    "start": Object {
                      "column": 19,
                      "line": 11,
                      "offset": 143,
                    },
                  },
                  "type": "break",
                },
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 19,
                      "line": 12,
                      "offset": 163,
                    },
                    "start": Object {
                      "column": 20,
                      "line": 11,
                      "offset": 144,
                    },
                  },
                  "type": "text",
                  "value": "
岑夫子，丹丘生，将进酒，杯莫停。",
                },
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 20,
                      "line": 12,
                      "offset": 164,
                    },
                    "start": Object {
                      "column": 19,
                      "line": 12,
                      "offset": 163,
                    },
                  },
                  "type": "break",
                },
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 17,
                      "line": 13,
                      "offset": 181,
                    },
                    "start": Object {
                      "column": 20,
                      "line": 12,
                      "offset": 164,
                    },
                  },
                  "type": "text",
                  "value": "
与君歌一曲，请君为我倾耳听。",
                },
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 18,
                      "line": 13,
                      "offset": 182,
                    },
                    "start": Object {
                      "column": 17,
                      "line": 13,
                      "offset": 181,
                    },
                  },
                  "type": "break",
                },
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 19,
                      "line": 14,
                      "offset": 201,
                    },
                    "start": Object {
                      "column": 18,
                      "line": 13,
                      "offset": 182,
                    },
                  },
                  "type": "text",
                  "value": "
钟鼓馔玉不足贵，但愿长醉不复醒。",
                },
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 20,
                      "line": 14,
                      "offset": 202,
                    },
                    "start": Object {
                      "column": 19,
                      "line": 14,
                      "offset": 201,
                    },
                  },
                  "type": "break",
                },
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 19,
                      "line": 15,
                      "offset": 221,
                    },
                    "start": Object {
                      "column": 20,
                      "line": 14,
                      "offset": 202,
                    },
                  },
                  "type": "text",
                  "value": "
古来圣贤皆寂寞，惟有饮者留其名。",
                },
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 20,
                      "line": 15,
                      "offset": 222,
                    },
                    "start": Object {
                      "column": 19,
                      "line": 15,
                      "offset": 221,
                    },
                  },
                  "type": "break",
                },
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 19,
                      "line": 16,
                      "offset": 241,
                    },
                    "start": Object {
                      "column": 20,
                      "line": 15,
                      "offset": 222,
                    },
                  },
                  "type": "text",
                  "value": "
陈王昔时宴平乐，斗酒十千恣欢谑。",
                },
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 20,
                      "line": 16,
                      "offset": 242,
                    },
                    "start": Object {
                      "column": 19,
                      "line": 16,
                      "offset": 241,
                    },
                  },
                  "type": "break",
                },
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 19,
                      "line": 17,
                      "offset": 261,
                    },
                    "start": Object {
                      "column": 20,
                      "line": 16,
                      "offset": 242,
                    },
                  },
                  "type": "text",
                  "value": "
主人何为言少钱，径须沽取对君酌。",
                },
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 20,
                      "line": 17,
                      "offset": 262,
                    },
                    "start": Object {
                      "column": 19,
                      "line": 17,
                      "offset": 261,
                    },
                  },
                  "type": "break",
                },
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 27,
                      "line": 18,
                      "offset": 289,
                    },
                    "start": Object {
                      "column": 20,
                      "line": 17,
                      "offset": 262,
                    },
                  },
                  "type": "text",
                  "value": "
五花马、千金裘，呼儿将出换美酒，与尔同销万古愁。",
                },
              ],
              "position": Object {
                "end": Object {
                  "column": 28,
                  "line": 18,
                  "offset": 290,
                },
                "start": Object {
                  "column": 3,
                  "line": 7,
                  "offset": 41,
                },
              },
              "type": "paragraph",
            },
          ],
          "position": Object {
            "end": Object {
              "column": 2,
              "line": 19,
              "offset": 291,
            },
            "start": Object {
              "column": 1,
              "line": 4,
              "offset": 25,
            },
          },
          "type": "blockquote",
        },
        Object {
          "children": Array [
            Object {
              "alt": "logo",
              "identifier": "logo",
              "label": "logo",
              "position": Object {
                "end": Object {
                  "column": 10,
                  "line": 21,
                  "offset": 302,
                },
                "start": Object {
                  "column": 1,
                  "line": 21,
                  "offset": 293,
                },
              },
              "referenceType": "collapsed",
              "type": "imageReference",
            },
          ],
          "position": Object {
            "end": Object {
              "column": 11,
              "line": 21,
              "offset": 303,
            },
            "start": Object {
              "column": 1,
              "line": 21,
              "offset": 293,
            },
          },
          "type": "paragraph",
        },
      ],
      "keyword": "tip",
      "position": Object {
        "end": Object {
          "column": 5,
          "line": 22,
          "offset": 307,
        },
        "start": Object {
          "column": 1,
          "line": 2,
          "offset": 1,
        },
      },
      "title": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 18,
              "line": 2,
              "offset": 18,
            },
            "start": Object {
              "column": 8,
              "line": 2,
              "offset": 8,
            },
          },
          "type": "text",
          "value": "将进酒 -- 李白 ",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 23,
              "line": 2,
              "offset": 23,
            },
            "start": Object {
              "column": 18,
              "line": 2,
              "offset": 18,
            },
          },
          "type": "inlineMath",
          "value": "x^2",
        },
      ],
      "type": "admonition",
    },
    Object {
      "children": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 11,
              "line": 24,
              "offset": 318,
            },
            "start": Object {
              "column": 1,
              "line": 24,
              "offset": 308,
            },
          },
          "type": "text",
          "value": "emphasis: ",
        },
        Object {
          "children": Array [
            Object {
              "position": Object {
                "end": Object {
                  "column": 18,
                  "line": 24,
                  "offset": 325,
                },
                "start": Object {
                  "column": 13,
                  "line": 24,
                  "offset": 320,
                },
              },
              "type": "text",
              "value": "foo \\"",
            },
            Object {
              "children": Array [
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 22,
                      "line": 24,
                      "offset": 329,
                    },
                    "start": Object {
                      "column": 19,
                      "line": 24,
                      "offset": 326,
                    },
                  },
                  "type": "text",
                  "value": "bar",
                },
              ],
              "position": Object {
                "end": Object {
                  "column": 23,
                  "line": 24,
                  "offset": 330,
                },
                "start": Object {
                  "column": 18,
                  "line": 24,
                  "offset": 325,
                },
              },
              "type": "emphasis",
            },
            Object {
              "position": Object {
                "end": Object {
                  "column": 28,
                  "line": 24,
                  "offset": 335,
                },
                "start": Object {
                  "column": 23,
                  "line": 24,
                  "offset": 330,
                },
              },
              "type": "text",
              "value": "\\" foo",
            },
          ],
          "position": Object {
            "end": Object {
              "column": 30,
              "line": 24,
              "offset": 337,
            },
            "start": Object {
              "column": 11,
              "line": 24,
              "offset": 318,
            },
          },
          "type": "strong",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 31,
          "line": 24,
          "offset": 338,
        },
        "start": Object {
          "column": 1,
          "line": 24,
          "offset": 308,
        },
      },
      "type": "paragraph",
    },
    Object {
      "children": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 22,
              "line": 26,
              "offset": 360,
            },
            "start": Object {
              "column": 1,
              "line": 26,
              "offset": 339,
            },
          },
          "type": "text",
          "value": "autolink(extension): ",
        },
        Object {
          "children": Array [
            Object {
              "position": Object {
                "end": Object {
                  "column": 40,
                  "line": 26,
                  "offset": 378,
                },
                "start": Object {
                  "column": 22,
                  "line": 26,
                  "offset": 360,
                },
              },
              "type": "text",
              "value": "http://example.com",
            },
          ],
          "position": Object {
            "end": Object {
              "column": 40,
              "line": 26,
              "offset": 378,
            },
            "start": Object {
              "column": 22,
              "line": 26,
              "offset": 360,
            },
          },
          "type": "link",
          "url": "http://example.com",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 41,
          "line": 26,
          "offset": 379,
        },
        "start": Object {
          "column": 1,
          "line": 26,
          "offset": 339,
        },
      },
      "type": "paragraph",
    },
    Object {
      "children": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 11,
              "line": 28,
              "offset": 390,
            },
            "start": Object {
              "column": 1,
              "line": 28,
              "offset": 380,
            },
          },
          "type": "text",
          "value": "autolink: ",
        },
        Object {
          "children": Array [
            Object {
              "position": Object {
                "end": Object {
                  "column": 31,
                  "line": 28,
                  "offset": 410,
                },
                "start": Object {
                  "column": 12,
                  "line": 28,
                  "offset": 391,
                },
              },
              "type": "text",
              "value": "foo@bar.example.com",
            },
          ],
          "position": Object {
            "end": Object {
              "column": 32,
              "line": 28,
              "offset": 411,
            },
            "start": Object {
              "column": 11,
              "line": 28,
              "offset": 390,
            },
          },
          "type": "link",
          "url": "mailto:foo@bar.example.com",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 33,
          "line": 28,
          "offset": 412,
        },
        "start": Object {
          "column": 1,
          "line": 28,
          "offset": 380,
        },
      },
      "type": "paragraph",
    },
    Object {
      "children": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 16,
              "line": 30,
              "offset": 428,
            },
            "start": Object {
              "column": 1,
              "line": 30,
              "offset": 413,
            },
          },
          "type": "text",
          "value": "Setext headings",
        },
      ],
      "depth": 1,
      "position": Object {
        "end": Object {
          "column": 11,
          "line": 31,
          "offset": 439,
        },
        "start": Object {
          "column": 1,
          "line": 30,
          "offset": 413,
        },
      },
      "type": "heading",
    },
    Object {
      "children": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 29,
              "line": 33,
              "offset": 468,
            },
            "start": Object {
              "column": 1,
              "line": 33,
              "offset": 440,
            },
          },
          "type": "text",
          "value": "Task List Items (extension):",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 30,
          "line": 33,
          "offset": 469,
        },
        "start": Object {
          "column": 1,
          "line": 33,
          "offset": 440,
        },
      },
      "type": "paragraph",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "position": Object {
                "end": Object {
                  "column": 10,
                  "line": 35,
                  "offset": 479,
                },
                "start": Object {
                  "column": 7,
                  "line": 35,
                  "offset": 476,
                },
              },
              "type": "text",
              "value": "foo",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "position": Object {
                        "end": Object {
                          "column": 12,
                          "line": 36,
                          "offset": 491,
                        },
                        "start": Object {
                          "column": 9,
                          "line": 36,
                          "offset": 488,
                        },
                      },
                      "type": "text",
                      "value": "bar",
                    },
                  ],
                  "position": Object {
                    "end": Object {
                      "column": 13,
                      "line": 36,
                      "offset": 492,
                    },
                    "start": Object {
                      "column": 3,
                      "line": 36,
                      "offset": 482,
                    },
                  },
                  "status": "doing",
                  "type": "listItem",
                },
                Object {
                  "children": Array [
                    Object {
                      "position": Object {
                        "end": Object {
                          "column": 12,
                          "line": 37,
                          "offset": 503,
                        },
                        "start": Object {
                          "column": 9,
                          "line": 37,
                          "offset": 500,
                        },
                      },
                      "type": "text",
                      "value": "baz",
                    },
                  ],
                  "position": Object {
                    "end": Object {
                      "column": 13,
                      "line": 37,
                      "offset": 504,
                    },
                    "start": Object {
                      "column": 3,
                      "line": 37,
                      "offset": 494,
                    },
                  },
                  "status": "done",
                  "type": "listItem",
                },
              ],
              "marker": 45,
              "orderType": undefined,
              "ordered": false,
              "position": Object {
                "end": Object {
                  "column": 13,
                  "line": 37,
                  "offset": 504,
                },
                "start": Object {
                  "column": 3,
                  "line": 36,
                  "offset": 482,
                },
              },
              "spread": false,
              "start": undefined,
              "type": "list",
            },
          ],
          "position": Object {
            "end": Object {
              "column": 13,
              "line": 37,
              "offset": 504,
            },
            "start": Object {
              "column": 1,
              "line": 35,
              "offset": 470,
            },
          },
          "status": "done",
          "type": "listItem",
        },
        Object {
          "children": Array [
            Object {
              "position": Object {
                "end": Object {
                  "column": 10,
                  "line": 38,
                  "offset": 513,
                },
                "start": Object {
                  "column": 7,
                  "line": 38,
                  "offset": 510,
                },
              },
              "type": "text",
              "value": "bim",
            },
          ],
          "position": Object {
            "end": Object {
              "column": 11,
              "line": 38,
              "offset": 514,
            },
            "start": Object {
              "column": 1,
              "line": 38,
              "offset": 504,
            },
          },
          "status": "todo",
          "type": "listItem",
        },
      ],
      "marker": 45,
      "orderType": undefined,
      "ordered": false,
      "position": Object {
        "end": Object {
          "column": 11,
          "line": 38,
          "offset": 514,
        },
        "start": Object {
          "column": 1,
          "line": 35,
          "offset": 470,
        },
      },
      "spread": false,
      "start": undefined,
      "type": "list",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "position": Object {
                "end": Object {
                  "column": 23,
                  "line": 40,
                  "offset": 537,
                },
                "start": Object {
                  "column": 3,
                  "line": 40,
                  "offset": 517,
                },
              },
              "type": "text",
              "value": "This is a blockquote",
            },
          ],
          "position": Object {
            "end": Object {
              "column": 24,
              "line": 40,
              "offset": 538,
            },
            "start": Object {
              "column": 3,
              "line": 40,
              "offset": 517,
            },
          },
          "type": "paragraph",
        },
        Object {
          "children": Array [
            Object {
              "position": Object {
                "end": Object {
                  "column": 23,
                  "line": 42,
                  "offset": 562,
                },
                "start": Object {
                  "column": 3,
                  "line": 42,
                  "offset": 542,
                },
              },
              "type": "text",
              "value": "with multiple lines.",
            },
          ],
          "position": Object {
            "end": Object {
              "column": 24,
              "line": 42,
              "offset": 563,
            },
            "start": Object {
              "column": 3,
              "line": 42,
              "offset": 542,
            },
          },
          "type": "paragraph",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 24,
          "line": 42,
          "offset": 563,
        },
        "start": Object {
          "column": 1,
          "line": 40,
          "offset": 515,
        },
      },
      "type": "blockquote",
    },
    Object {
      "lang": "typescript",
      "meta": "title=\\"demo.ts\\"",
      "position": Object {
        "end": Object {
          "column": 5,
          "line": 49,
          "offset": 705,
        },
        "start": Object {
          "column": 1,
          "line": 44,
          "offset": 564,
        },
      },
      "type": "code",
      "value": "const a = 'a'
const b = 'b'
console.log('a + b:', a + b)
console.log('This is a typescript code snippets')
",
    },
    Object {
      "children": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 19,
              "line": 51,
              "offset": 724,
            },
            "start": Object {
              "column": 1,
              "line": 51,
              "offset": 706,
            },
          },
          "type": "text",
          "value": "Hidden the linenos",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 20,
          "line": 51,
          "offset": 725,
        },
        "start": Object {
          "column": 1,
          "line": 51,
          "offset": 706,
        },
      },
      "type": "paragraph",
    },
    Object {
      "lang": "typescript",
      "meta": "title=\\"demo.ts\\" linenos=false",
      "position": Object {
        "end": Object {
          "column": 5,
          "line": 58,
          "offset": 881,
        },
        "start": Object {
          "column": 1,
          "line": 53,
          "offset": 726,
        },
      },
      "type": "code",
      "value": "const a = 'a'
const b = 'b'
console.log('a + b:', a + b)
console.log('This is a typescript code snippets')
",
    },
    Object {
      "children": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 22,
              "line": 60,
              "offset": 903,
            },
            "start": Object {
              "column": 1,
              "line": 60,
              "offset": 882,
            },
          },
          "type": "text",
          "value": "This is a math block:",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 23,
          "line": 60,
          "offset": 904,
        },
        "start": Object {
          "column": 1,
          "line": 60,
          "offset": 882,
        },
      },
      "type": "paragraph",
    },
    Object {
      "position": Object {
        "end": Object {
          "column": 127,
          "line": 62,
          "offset": 1031,
        },
        "start": Object {
          "column": 1,
          "line": 62,
          "offset": 905,
        },
      },
      "type": "math",
      "value": "\\\\lvert f(x)-A \\\\rvert = \\\\left\\\\lvert \\\\frac{x^2-1}{x-1}-2 \\\\right\\\\rvert = \\\\lvert x+1-2 \\\\rvert = \\\\lvert x-1 \\\\rvert  < \\\\epsilon",
    },
    Object {
      "position": Object {
        "end": Object {
          "column": 5,
          "line": 64,
          "offset": 1036,
        },
        "start": Object {
          "column": 1,
          "line": 64,
          "offset": 1032,
        },
      },
      "type": "thematicBreak",
    },
    Object {
      "children": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 11,
              "line": 66,
              "offset": 1047,
            },
            "start": Object {
              "column": 3,
              "line": 66,
              "offset": 1039,
            },
          },
          "type": "text",
          "value": "heading1",
        },
      ],
      "depth": 1,
      "position": Object {
        "end": Object {
          "column": 12,
          "line": 66,
          "offset": 1048,
        },
        "start": Object {
          "column": 1,
          "line": 66,
          "offset": 1037,
        },
      },
      "type": "heading",
    },
    Object {
      "children": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 12,
              "line": 67,
              "offset": 1059,
            },
            "start": Object {
              "column": 4,
              "line": 67,
              "offset": 1051,
            },
          },
          "type": "text",
          "value": "heading2",
        },
      ],
      "depth": 2,
      "position": Object {
        "end": Object {
          "column": 13,
          "line": 67,
          "offset": 1060,
        },
        "start": Object {
          "column": 1,
          "line": 67,
          "offset": 1048,
        },
      },
      "type": "heading",
    },
    Object {
      "children": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 13,
              "line": 68,
              "offset": 1072,
            },
            "start": Object {
              "column": 5,
              "line": 68,
              "offset": 1064,
            },
          },
          "type": "text",
          "value": "heading3",
        },
      ],
      "depth": 3,
      "position": Object {
        "end": Object {
          "column": 14,
          "line": 68,
          "offset": 1073,
        },
        "start": Object {
          "column": 1,
          "line": 68,
          "offset": 1060,
        },
      },
      "type": "heading",
    },
    Object {
      "children": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 14,
              "line": 69,
              "offset": 1086,
            },
            "start": Object {
              "column": 6,
              "line": 69,
              "offset": 1078,
            },
          },
          "type": "text",
          "value": "heading4",
        },
      ],
      "depth": 4,
      "position": Object {
        "end": Object {
          "column": 15,
          "line": 69,
          "offset": 1087,
        },
        "start": Object {
          "column": 1,
          "line": 69,
          "offset": 1073,
        },
      },
      "type": "heading",
    },
    Object {
      "children": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 15,
              "line": 70,
              "offset": 1101,
            },
            "start": Object {
              "column": 7,
              "line": 70,
              "offset": 1093,
            },
          },
          "type": "text",
          "value": "heading5",
        },
      ],
      "depth": 5,
      "position": Object {
        "end": Object {
          "column": 16,
          "line": 70,
          "offset": 1102,
        },
        "start": Object {
          "column": 1,
          "line": 70,
          "offset": 1087,
        },
      },
      "type": "heading",
    },
    Object {
      "children": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 16,
              "line": 71,
              "offset": 1117,
            },
            "start": Object {
              "column": 8,
              "line": 71,
              "offset": 1109,
            },
          },
          "type": "text",
          "value": "heading6",
        },
      ],
      "depth": 6,
      "position": Object {
        "end": Object {
          "column": 17,
          "line": 71,
          "offset": 1118,
        },
        "start": Object {
          "column": 1,
          "line": 71,
          "offset": 1102,
        },
      },
      "type": "heading",
    },
    Object {
      "position": Object {
        "end": Object {
          "column": 5,
          "line": 73,
          "offset": 1123,
        },
        "start": Object {
          "column": 1,
          "line": 73,
          "offset": 1119,
        },
      },
      "type": "thematicBreak",
    },
    Object {
      "children": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 20,
              "line": 75,
              "offset": 1143,
            },
            "start": Object {
              "column": 1,
              "line": 75,
              "offset": 1124,
            },
          },
          "type": "text",
          "value": "This is a footnote ",
        },
        Object {
          "children": Array [
            Object {
              "position": Object {
                "end": Object {
                  "column": 35,
                  "line": 75,
                  "offset": 1158,
                },
                "start": Object {
                  "column": 22,
                  "line": 75,
                  "offset": 1145,
                },
              },
              "type": "text",
              "value": "something....",
            },
          ],
          "position": Object {
            "end": Object {
              "column": 36,
              "line": 75,
              "offset": 1159,
            },
            "start": Object {
              "column": 20,
              "line": 75,
              "offset": 1143,
            },
          },
          "type": "footnote",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 37,
              "line": 75,
              "offset": 1160,
            },
            "start": Object {
              "column": 36,
              "line": 75,
              "offset": 1159,
            },
          },
          "type": "text",
          "value": ".",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 38,
          "line": 75,
          "offset": 1161,
        },
        "start": Object {
          "column": 1,
          "line": 75,
          "offset": 1124,
        },
      },
      "type": "paragraph",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "position": Object {
                "end": Object {
                  "column": 41,
                  "line": 77,
                  "offset": 1202,
                },
                "start": Object {
                  "column": 11,
                  "line": 77,
                  "offset": 1172,
                },
              },
              "type": "text",
              "value": "This is a footnote definition.",
            },
          ],
          "position": Object {
            "end": Object {
              "column": 42,
              "line": 77,
              "offset": 1203,
            },
            "start": Object {
              "column": 10,
              "line": 77,
              "offset": 1171,
            },
          },
          "type": "paragraph",
        },
      ],
      "identifier": "foo-2",
      "label": "foo-2",
      "position": Object {
        "end": Object {
          "column": 42,
          "line": 77,
          "offset": 1203,
        },
        "start": Object {
          "column": 1,
          "line": 77,
          "offset": 1162,
        },
      },
      "type": "footnoteDefinition",
    },
    Object {
      "children": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 30,
              "line": 79,
              "offset": 1233,
            },
            "start": Object {
              "column": 1,
              "line": 79,
              "offset": 1204,
            },
          },
          "type": "text",
          "value": "This is a footnote reference ",
        },
        Object {
          "identifier": "foo-2",
          "label": "foo-2",
          "position": Object {
            "end": Object {
              "column": 38,
              "line": 79,
              "offset": 1241,
            },
            "start": Object {
              "column": 30,
              "line": 79,
              "offset": 1233,
            },
          },
          "type": "footnoteReference",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 39,
          "line": 79,
          "offset": 1242,
        },
        "start": Object {
          "column": 1,
          "line": 79,
          "offset": 1204,
        },
      },
      "type": "paragraph",
    },
    Object {
      "position": Object {
        "end": Object {
          "column": 5,
          "line": 81,
          "offset": 1247,
        },
        "start": Object {
          "column": 1,
          "line": 81,
          "offset": 1243,
        },
      },
      "type": "thematicBreak",
    },
    Object {
      "children": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 13,
              "line": 83,
              "offset": 1260,
            },
            "start": Object {
              "column": 1,
              "line": 83,
              "offset": 1248,
            },
          },
          "type": "text",
          "value": "Definitions:",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 14,
          "line": 83,
          "offset": 1261,
        },
        "start": Object {
          "column": 1,
          "line": 83,
          "offset": 1248,
        },
      },
      "type": "paragraph",
    },
    Object {
      "identifier": "logo",
      "label": "logo",
      "position": Object {
        "end": Object {
          "column": 44,
          "line": 85,
          "offset": 1305,
        },
        "start": Object {
          "column": 1,
          "line": 85,
          "offset": 1262,
        },
      },
      "title": "The logo of Yozora",
      "type": "definition",
      "url": "/img/logo.png",
    },
    Object {
      "identifier": "bar",
      "label": "bar",
      "position": Object {
        "end": Object {
          "column": 22,
          "line": 86,
          "offset": 1326,
        },
        "start": Object {
          "column": 1,
          "line": 86,
          "offset": 1305,
        },
      },
      "title": "title2",
      "type": "definition",
      "url": "/bar",
    },
    Object {
      "identifier": "baz",
      "label": "baz",
      "position": Object {
        "end": Object {
          "column": 13,
          "line": 87,
          "offset": 1338,
        },
        "start": Object {
          "column": 1,
          "line": 87,
          "offset": 1326,
        },
      },
      "title": undefined,
      "type": "definition",
      "url": "/waw",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "position": Object {
                "end": Object {
                  "column": 6,
                  "line": 89,
                  "offset": 1344,
                },
                "start": Object {
                  "column": 2,
                  "line": 89,
                  "offset": 1340,
                },
              },
              "type": "text",
              "value": "logo",
            },
          ],
          "identifier": "bar",
          "label": "bar",
          "position": Object {
            "end": Object {
              "column": 12,
              "line": 89,
              "offset": 1350,
            },
            "start": Object {
              "column": 1,
              "line": 89,
              "offset": 1339,
            },
          },
          "referenceType": "full",
          "type": "linkReference",
        },
        Object {
          "children": Array [
            Object {
              "position": Object {
                "end": Object {
                  "column": 16,
                  "line": 89,
                  "offset": 1354,
                },
                "start": Object {
                  "column": 13,
                  "line": 89,
                  "offset": 1351,
                },
              },
              "type": "text",
              "value": "baz",
            },
          ],
          "identifier": "baz",
          "label": "baz",
          "position": Object {
            "end": Object {
              "column": 17,
              "line": 89,
              "offset": 1355,
            },
            "start": Object {
              "column": 12,
              "line": 89,
              "offset": 1350,
            },
          },
          "referenceType": "shortcut",
          "type": "linkReference",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 18,
              "line": 89,
              "offset": 1356,
            },
            "start": Object {
              "column": 17,
              "line": 89,
              "offset": 1355,
            },
          },
          "type": "text",
          "value": "
",
        },
        Object {
          "children": Array [
            Object {
              "position": Object {
                "end": Object {
                  "column": 6,
                  "line": 90,
                  "offset": 1361,
                },
                "start": Object {
                  "column": 2,
                  "line": 90,
                  "offset": 1357,
                },
              },
              "type": "text",
              "value": "logo",
            },
          ],
          "identifier": "logo",
          "label": "logo",
          "position": Object {
            "end": Object {
              "column": 7,
              "line": 90,
              "offset": 1362,
            },
            "start": Object {
              "column": 1,
              "line": 90,
              "offset": 1356,
            },
          },
          "referenceType": "shortcut",
          "type": "linkReference",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 8,
              "line": 90,
              "offset": 1363,
            },
            "start": Object {
              "column": 7,
              "line": 90,
              "offset": 1362,
            },
          },
          "type": "text",
          "value": " ",
        },
        Object {
          "children": Array [
            Object {
              "position": Object {
                "end": Object {
                  "column": 12,
                  "line": 90,
                  "offset": 1367,
                },
                "start": Object {
                  "column": 9,
                  "line": 90,
                  "offset": 1364,
                },
              },
              "type": "text",
              "value": "bar",
            },
          ],
          "identifier": "baz",
          "label": "baz",
          "position": Object {
            "end": Object {
              "column": 18,
              "line": 90,
              "offset": 1373,
            },
            "start": Object {
              "column": 8,
              "line": 90,
              "offset": 1363,
            },
          },
          "referenceType": "full",
          "type": "linkReference",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 19,
              "line": 90,
              "offset": 1374,
            },
            "start": Object {
              "column": 18,
              "line": 90,
              "offset": 1373,
            },
          },
          "type": "text",
          "value": "
",
        },
        Object {
          "children": Array [
            Object {
              "position": Object {
                "end": Object {
                  "column": 6,
                  "line": 91,
                  "offset": 1379,
                },
                "start": Object {
                  "column": 2,
                  "line": 91,
                  "offset": 1375,
                },
              },
              "type": "text",
              "value": "logo",
            },
          ],
          "identifier": "logo",
          "label": "logo",
          "position": Object {
            "end": Object {
              "column": 9,
              "line": 91,
              "offset": 1382,
            },
            "start": Object {
              "column": 1,
              "line": 91,
              "offset": 1374,
            },
          },
          "referenceType": "collapsed",
          "type": "linkReference",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 10,
          "line": 91,
          "offset": 1383,
        },
        "start": Object {
          "column": 1,
          "line": 89,
          "offset": 1339,
        },
      },
      "type": "paragraph",
    },
    Object {
      "children": Array [
        Object {
          "alt": "logo",
          "identifier": "logo",
          "label": "logo",
          "position": Object {
            "end": Object {
              "column": 10,
              "line": 93,
              "offset": 1393,
            },
            "start": Object {
              "column": 1,
              "line": 93,
              "offset": 1384,
            },
          },
          "referenceType": "collapsed",
          "type": "imageReference",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 11,
          "line": 93,
          "offset": 1394,
        },
        "start": Object {
          "column": 1,
          "line": 93,
          "offset": 1384,
        },
      },
      "type": "paragraph",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "position": Object {
                "end": Object {
                  "column": 13,
                  "line": 95,
                  "offset": 1407,
                },
                "start": Object {
                  "column": 2,
                  "line": 95,
                  "offset": 1396,
                },
              },
              "type": "text",
              "value": "Guanghechen",
            },
          ],
          "position": Object {
            "end": Object {
              "column": 63,
              "line": 95,
              "offset": 1457,
            },
            "start": Object {
              "column": 1,
              "line": 95,
              "offset": 1395,
            },
          },
          "title": "this is a link",
          "type": "link",
          "url": "https://github.com/guanghechen",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 88,
              "line": 95,
              "offset": 1482,
            },
            "start": Object {
              "column": 63,
              "line": 95,
              "offset": 1457,
            },
          },
          "type": "text",
          "value": " is the author of yozora.",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 89,
          "line": 95,
          "offset": 1483,
        },
        "start": Object {
          "column": 1,
          "line": 95,
          "offset": 1395,
        },
      },
      "type": "paragraph",
    },
    Object {
      "children": Array [
        Object {
          "alt": "foo",
          "position": Object {
            "end": Object {
              "column": 75,
              "line": 97,
              "offset": 1558,
            },
            "start": Object {
              "column": 1,
              "line": 97,
              "offset": 1484,
            },
          },
          "title": "guanghechen",
          "type": "image",
          "url": "https://avatars.githubusercontent.com/u/42513619?v=4",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 76,
          "line": 97,
          "offset": 1559,
        },
        "start": Object {
          "column": 1,
          "line": 97,
          "offset": 1484,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 76,
      "line": 97,
      "offset": 1559,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`snapshot basic: shouldn't reserve position 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "将进酒",
                },
              ],
              "depth": 3,
              "type": "heading",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "君不见黄河之水天上来，奔流到海不复回。",
                },
                Object {
                  "type": "break",
                },
                Object {
                  "type": "text",
                  "value": "
君不见高堂明镜悲白发，朝如青丝暮成雪。",
                },
                Object {
                  "type": "break",
                },
                Object {
                  "type": "text",
                  "value": "
人生得意须尽欢，莫使金樽空对月。",
                },
                Object {
                  "type": "break",
                },
                Object {
                  "type": "text",
                  "value": "
天生我材必有用，千金散尽还复来。",
                },
                Object {
                  "type": "break",
                },
                Object {
                  "type": "text",
                  "value": "
烹羊宰牛且为乐，会须一饮三百杯。",
                },
                Object {
                  "type": "break",
                },
                Object {
                  "type": "text",
                  "value": "
岑夫子，丹丘生，将进酒，杯莫停。",
                },
                Object {
                  "type": "break",
                },
                Object {
                  "type": "text",
                  "value": "
与君歌一曲，请君为我倾耳听。",
                },
                Object {
                  "type": "break",
                },
                Object {
                  "type": "text",
                  "value": "
钟鼓馔玉不足贵，但愿长醉不复醒。",
                },
                Object {
                  "type": "break",
                },
                Object {
                  "type": "text",
                  "value": "
古来圣贤皆寂寞，惟有饮者留其名。",
                },
                Object {
                  "type": "break",
                },
                Object {
                  "type": "text",
                  "value": "
陈王昔时宴平乐，斗酒十千恣欢谑。",
                },
                Object {
                  "type": "break",
                },
                Object {
                  "type": "text",
                  "value": "
主人何为言少钱，径须沽取对君酌。",
                },
                Object {
                  "type": "break",
                },
                Object {
                  "type": "text",
                  "value": "
五花马、千金裘，呼儿将出换美酒，与尔同销万古愁。",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "blockquote",
        },
        Object {
          "children": Array [
            Object {
              "alt": "logo",
              "identifier": "logo",
              "label": "logo",
              "referenceType": "collapsed",
              "type": "imageReference",
            },
          ],
          "type": "paragraph",
        },
      ],
      "keyword": "tip",
      "title": Array [
        Object {
          "type": "text",
          "value": "将进酒 -- 李白 ",
        },
        Object {
          "type": "inlineMath",
          "value": "x^2",
        },
      ],
      "type": "admonition",
    },
    Object {
      "children": Array [
        Object {
          "type": "text",
          "value": "emphasis: ",
        },
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "foo \\"",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "bar",
                },
              ],
              "type": "emphasis",
            },
            Object {
              "type": "text",
              "value": "\\" foo",
            },
          ],
          "type": "strong",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "children": Array [
        Object {
          "type": "text",
          "value": "autolink(extension): ",
        },
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "http://example.com",
            },
          ],
          "type": "link",
          "url": "http://example.com",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "children": Array [
        Object {
          "type": "text",
          "value": "autolink: ",
        },
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "foo@bar.example.com",
            },
          ],
          "type": "link",
          "url": "mailto:foo@bar.example.com",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "children": Array [
        Object {
          "type": "text",
          "value": "Setext headings",
        },
      ],
      "depth": 1,
      "type": "heading",
    },
    Object {
      "children": Array [
        Object {
          "type": "text",
          "value": "Task List Items (extension):",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "foo",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "type": "text",
                      "value": "bar",
                    },
                  ],
                  "status": "doing",
                  "type": "listItem",
                },
                Object {
                  "children": Array [
                    Object {
                      "type": "text",
                      "value": "baz",
                    },
                  ],
                  "status": "done",
                  "type": "listItem",
                },
              ],
              "marker": 45,
              "orderType": undefined,
              "ordered": false,
              "spread": false,
              "start": undefined,
              "type": "list",
            },
          ],
          "status": "done",
          "type": "listItem",
        },
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "bim",
            },
          ],
          "status": "todo",
          "type": "listItem",
        },
      ],
      "marker": 45,
      "orderType": undefined,
      "ordered": false,
      "spread": false,
      "start": undefined,
      "type": "list",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "This is a blockquote",
            },
          ],
          "type": "paragraph",
        },
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "with multiple lines.",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "blockquote",
    },
    Object {
      "lang": "typescript",
      "meta": "title=\\"demo.ts\\"",
      "type": "code",
      "value": "const a = 'a'
const b = 'b'
console.log('a + b:', a + b)
console.log('This is a typescript code snippets')
",
    },
    Object {
      "children": Array [
        Object {
          "type": "text",
          "value": "Hidden the linenos",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "lang": "typescript",
      "meta": "title=\\"demo.ts\\" linenos=false",
      "type": "code",
      "value": "const a = 'a'
const b = 'b'
console.log('a + b:', a + b)
console.log('This is a typescript code snippets')
",
    },
    Object {
      "children": Array [
        Object {
          "type": "text",
          "value": "This is a math block:",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "type": "math",
      "value": "\\\\lvert f(x)-A \\\\rvert = \\\\left\\\\lvert \\\\frac{x^2-1}{x-1}-2 \\\\right\\\\rvert = \\\\lvert x+1-2 \\\\rvert = \\\\lvert x-1 \\\\rvert  < \\\\epsilon",
    },
    Object {
      "type": "thematicBreak",
    },
    Object {
      "children": Array [
        Object {
          "type": "text",
          "value": "heading1",
        },
      ],
      "depth": 1,
      "type": "heading",
    },
    Object {
      "children": Array [
        Object {
          "type": "text",
          "value": "heading2",
        },
      ],
      "depth": 2,
      "type": "heading",
    },
    Object {
      "children": Array [
        Object {
          "type": "text",
          "value": "heading3",
        },
      ],
      "depth": 3,
      "type": "heading",
    },
    Object {
      "children": Array [
        Object {
          "type": "text",
          "value": "heading4",
        },
      ],
      "depth": 4,
      "type": "heading",
    },
    Object {
      "children": Array [
        Object {
          "type": "text",
          "value": "heading5",
        },
      ],
      "depth": 5,
      "type": "heading",
    },
    Object {
      "children": Array [
        Object {
          "type": "text",
          "value": "heading6",
        },
      ],
      "depth": 6,
      "type": "heading",
    },
    Object {
      "type": "thematicBreak",
    },
    Object {
      "children": Array [
        Object {
          "type": "text",
          "value": "This is a footnote ",
        },
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "something....",
            },
          ],
          "type": "footnote",
        },
        Object {
          "type": "text",
          "value": ".",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "This is a footnote definition.",
            },
          ],
          "type": "paragraph",
        },
      ],
      "identifier": "foo-2",
      "label": "foo-2",
      "type": "footnoteDefinition",
    },
    Object {
      "children": Array [
        Object {
          "type": "text",
          "value": "This is a footnote reference ",
        },
        Object {
          "identifier": "foo-2",
          "label": "foo-2",
          "type": "footnoteReference",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "type": "thematicBreak",
    },
    Object {
      "children": Array [
        Object {
          "type": "text",
          "value": "Definitions:",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "identifier": "logo",
      "label": "logo",
      "title": "The logo of Yozora",
      "type": "definition",
      "url": "/img/logo.png",
    },
    Object {
      "identifier": "bar",
      "label": "bar",
      "title": "title2",
      "type": "definition",
      "url": "/bar",
    },
    Object {
      "identifier": "baz",
      "label": "baz",
      "title": undefined,
      "type": "definition",
      "url": "/waw",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "logo",
            },
          ],
          "identifier": "bar",
          "label": "bar",
          "referenceType": "full",
          "type": "linkReference",
        },
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "baz",
            },
          ],
          "identifier": "baz",
          "label": "baz",
          "referenceType": "shortcut",
          "type": "linkReference",
        },
        Object {
          "type": "text",
          "value": "
",
        },
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "logo",
            },
          ],
          "identifier": "logo",
          "label": "logo",
          "referenceType": "shortcut",
          "type": "linkReference",
        },
        Object {
          "type": "text",
          "value": " ",
        },
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "bar",
            },
          ],
          "identifier": "baz",
          "label": "baz",
          "referenceType": "full",
          "type": "linkReference",
        },
        Object {
          "type": "text",
          "value": "
",
        },
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "logo",
            },
          ],
          "identifier": "logo",
          "label": "logo",
          "referenceType": "collapsed",
          "type": "linkReference",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "children": Array [
        Object {
          "alt": "logo",
          "identifier": "logo",
          "label": "logo",
          "referenceType": "collapsed",
          "type": "imageReference",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Guanghechen",
            },
          ],
          "title": "this is a link",
          "type": "link",
          "url": "https://github.com/guanghechen",
        },
        Object {
          "type": "text",
          "value": " is the author of yozora.",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "children": Array [
        Object {
          "alt": "foo",
          "title": "guanghechen",
          "type": "image",
          "url": "https://avatars.githubusercontent.com/u/42513619?v=4",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "root",
}
`;
